--- a/package.json
+++ b/package.json
@@ -25,6 +25,17 @@
     "string",
     "encoding"
   ],
+  "testling" : {
+    "files" : "test/browser/*.js",
+    "browsers" : [
+      "ie/6..latest",
+      "chrome/25..latest",
+      "firefox/10..latest",
+      "safari/5..latest",
+      "opera/11.0..latest",
+      "iphone/6", "ipad/6"
+    ]
+  },
   "author": {
     "name": "James Halliday",
     "email": "mail@substack.net",
